# obliterate

./: README.md  default.nix
frontend/: frontend.cabal
frontend/src/: Frontend.hs
